# asr_playground

./: .gitignore  README.md  main.py  output.json  pyproject.toml  transcript-in-person-discussion-13-people.json  transcript.json
