[tool.poetry]
name = "asr-playground"
version = "0.1.0"
description = ""
authors = ["Andy Garbett <andy@thinkactivelabs.co.uk>"]
readme = "README.md"
packages = [{include = "asr_playground"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
